tests/tests/snapshots/integration__run_images@add_polygon1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/add_polygon1.gleam
---
<svg width="85.0" height="85.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 20.0 20.0 L 85.0 20.0 L 85.0 85.0 L 20.0 85.0 Z" fill="rgba(173, 216, 230, 1.0)" />
    <path d="M 50.0 0.0 L 70.0 70.0 L 0.0 50.0 Z" fill="rgba(34, 139, 34, 1.0)" />
  </g>
</svg>
