tests/tests/snapshots/integration__run_images@add_polygon3.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/add_polygon3.gleam
---
<svg width="70.0" height="70.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 10.0 10.0 L 60.0 10.0 L 60.0 60.0 L 10.0 60.0 Z" fill="rgba(173, 216, 230, 1.0)" />
    <path d="M 35.0 0.0 L 70.0 35.0 L 35.0 70.0 L 0.0 35.0 Z" fill="rgba(255, 192, 203, 1.0)" />
  </g>
</svg>
